--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
 		"jakub-onderka/php-parallel-lint": "1.0.0",
 		"mediawiki/minus-x": "0.3.1",
 		"wikibase/wikibase-codesniffer": "^0.5.1",
-		"php-coveralls/php-coveralls": "^2.0.0"
+		"php-coveralls/php-coveralls": "^2.0.0",
+		"mediawiki/mediawiki-phan-config": "0.4.0"
 	},
 	"scripts": {
 		"fix": [
