--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
 	"private": true,
 	"scripts": {
-		"test": "grunt test"
+		"test": "grunt test",
+		"selenium-test": "wdio tests/selenium/wdio.conf.js"
 	},
 	"devDependencies": {
 		"grunt": "1.0.4",
-		"grunt-banana-checker": "0.6.0"
+		"grunt-banana-checker": "0.6.0",
+		"wdio-mediawiki": "0.3.0",
+		"wdio-mocha-framework": "0.6.4",
+		"wdio-spec-reporter": "0.1.5",
+		"webdriverio": "4.14.4"
 	}
 }
