--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
 	"private": true,
 	"scripts": {
-		"test": "grunt test",
-		"selenium-test": "wdio tests/selenium/wdio.conf.js"
+		"selenium-daily": "npm run selenium-test",
+		"selenium-test": "wdio tests/selenium/wdio.conf.js",
+		"test": "grunt test"
 	},
 	"devDependencies": {
 		"grunt": "1.0.4",
