--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
 		"jakub-onderka/php-console-highlighter": "0.3.2",
 		"jakub-onderka/php-parallel-lint": "1.0.0",
 		"mediawiki/minus-x": "0.3.1",
-		"wikibase/wikibase-codesniffer": "^0.5.1",
+		"wikibase/wikibase-codesniffer": "1.0.0",
 		"php-coveralls/php-coveralls": "^2.0.0",
 		"mediawiki/mediawiki-phan-config": "0.6.1"
 	},
