--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
 		"test": "grunt test"
 	},
 	"devDependencies": {
+		"@wdio/cli": "5.22.4",
+		"@wdio/local-runner": "5.22.4",
+		"@wdio/mocha-framework": "5.18.7",
+		"@wdio/spec-reporter": "5.22.4",
+		"@wdio/sync": "5.20.1",
 		"grunt": "1.1.0",
 		"grunt-banana-checker": "0.9.0",
-		"wdio-mediawiki": "0.4.0",
-		"wdio-mocha-framework": "0.6.4",
-		"wdio-spec-reporter": "0.1.5",
-		"webdriverio": "4.14.4"
+		"wdio-mediawiki": "1.0.0",
+		"webdriverio": "5.22.4"
 	}
 }
