--- a/package.json
+++ b/package.json
@@ -1,19 +1,10 @@
 {
 	"private": true,
 	"scripts": {
-		"selenium-daily": "npm run selenium-test",
-		"selenium-test": "wdio tests/selenium/wdio.conf.js",
 		"test": "grunt test"
 	},
 	"devDependencies": {
-		"@wdio/cli": "6.1.12",
-		"@wdio/local-runner": "6.1.12",
-		"@wdio/mocha-framework": "6.1.8",
-		"@wdio/spec-reporter": "6.1.12",
-		"@wdio/sync": "6.1.8",
 		"grunt": "1.1.0",
-		"grunt-banana-checker": "0.9.0",
-		"wdio-mediawiki": "1.0.0",
-		"webdriverio": "6.1.12"
+		"grunt-banana-checker": "0.9.0"
 	}
 }
