--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
 		"irc": "irc://irc.libera.chat/wikimedia-discovery"
 	},
 	"require-dev": {
-		"mediawiki/mediawiki-codesniffer": "41.0.0",
+		"mediawiki/mediawiki-codesniffer": "43.0.0",
 		"mediawiki/mediawiki-phan-config": "0.14.0",
 		"mediawiki/minus-x": "1.1.1",
 		"php-coveralls/php-coveralls": "^2.0.0",
@@ -47,7 +47,8 @@
 	},
 	"config": {
 		"allow-plugins": {
-			"composer/installers": true
+			"composer/installers": true,
+			"dealerdirect/phpcodesniffer-composer-installer": true
 		}
 	}
 }
